--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,10 @@
       <h3>Ingresa tu numero de tarjeta sin espacios</h3>
       <form name="creditCardForm">
         <label for="cardNumber">Tarjeta de Credito:</label>
-      <input id="cardNumber" type:"text" placeholder="Ejemplo: 1234567890" required>
+      <input id="cardNumber" type="text" placeholder="Ejemplo: 1234567890" required>
       </form>
   <br><!--aqui tenemos que ver como linkear el js para la funcion de ocultar los numeros y dejar visibles los ultimos 4-->
-      <button id="boton4" class="botones"> Aceptar </input ><!--este boton me lleva a formulario de contacto--><!--aqui tenemos que linkear la logica del js para la verificacion de la tarjeta-->
+      <button id="boton4" class="botones"> Aceptar </button><!--este boton me lleva a formulario de contacto--><!--aqui tenemos que linkear la logica del js para la verificacion de la tarjeta-->
       <button id="boton5" class="botones"> Cancelar </button>
       <br>
       <br>
@@ -141,6 +141,7 @@
   </main>
   <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados. </footer><!--se repite mismo footer en todas las paginas-->
     </div>
+  
     <script src="index.js" type="module"> </script> 
   </body>
 </html>
