--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,14 @@
 
         <br>
 
-     <h3 id="textFstSlide">¡Bienvenido! <br>
-        ¿Eres mayor de 18 años?</h3>
-      </script>
+     <h3><strong>¡Bienvenido! <br>
+        ¿Eres mayor de 18 años?</strong></h3>
        <button id="boton1" class="botones">Si</button>
         <!--Este boton es me lleva a pantalla ingresar tarjeta de credito o enterCard-->
         <button id="boton2" class="botones">No</button>
         <!--este boton me lleva a pantalla forbidden-->
         <br>
-        <br>
+        
         <button id="boton3" class="botones">About Us</button>
         <!--este boton me lleva a la información de la aplicación-->
         <br>
@@ -51,14 +50,13 @@
         <label for="cardNumber">Tarjeta de Credito:</label>
       <input id="cardNumber" type="text" placeholder="Ejemplo: 1234567890" required>
       </form>
-  <br><!--aqui tenemos que ver como linkear el js para la funcion de ocultar los numeros y dejar visibles los ultimos 4-->
+  <br>
       <button id="boton4" class="botones"> Aceptar </button><!--este boton me lleva a formulario de contacto--><!--aqui tenemos que linkear la logica del js para la verificacion de la tarjeta-->
       <button id="boton5" class="botones"> Cancelar </button>
       <br>
       <br>
       </main><!--este boton me lleva al inicio, y funiciona como boton generico para varias paginas-->
       <hr>
-      <br>
       <br>
   <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados.</footer><!--se repite mismo footer en todas las paginas-->
       </div>
@@ -68,21 +66,23 @@
         <img src="banner.png" id="imgTelos" alt="banner_image">
       </header>
       <main class="slideThree">
-        <p id="textoAboutUs"> <span padding="00px" margin="10px"><!--ACA TENEMOS QUE DESCUBRIR COMO AÑADIR MARGEN-->
-   Somos un voto de confianza, entre la red de los <strong> Moteles de Chile</strong> y sus <strong>clientes</strong>, quienes gracias a <strong>ID TELOS</strong>, podrán vivir una experiencia acogedora y cercana en vuestras instalaciones. </span>
-  <br>
+
+        <p id="textoAboutUs"><!--ACA TENEMOS QUE DESCUBRIR COMO AÑADIR MARGEN-->
+   Somos un voto de confianza, entre la red de los <strong> Moteles de Chile</strong> y sus <strong>clientes</strong>, quienes gracias a <strong>ID TELOS</strong>, podrán vivir una experiencia acogedora y cercana en vuestras instalaciones.
   <br>
   <strong>ID TELOS</strong> <em>"Servicio de verificación"</em>, permite a los establecimientos, tener una garantía de confianza, gracias a lo cuál sus clientes podrán:
-  <ul id="beneficios"><!--esta es una lista-->
-  <li> Reservar online una previa reserva a traves confirmacion de tarjeta de credito valida.</li>
-  
-  <li> Pagar por su servicio, una vez finalizado, y no al ingresar al recinto</li>
-  </ul>
+  <p2 class= "beneficios">
+    <br>
+  <br>*Reservar online una previa reserva a traves confirmacion de tarjeta de credito valida.
+  <br>
+  *Pagar por su servicio, una vez finalizado, y no al ingresar al recinto.</p2>
+  <br>
   <br>
   Con estos simples pasos, la experiencia pasará de ser espectacular, a <strong>inolvidable</strong></p>
-  <h4>¿Quieres más información? Escríbenos a <a href= "mailto: info@idtelos.cl"> info@idtelos.cl</a></h4><!--envía correo electronico-->
+  <h4 class="infoId">¿Quieres más información? Escríbenos a <a href= "mailto: info@idtelos.cl"> info@idtelos.cl</a></h4><!--envía correo electronico-->
   
   <button id="boton6" class="botones">Regresar</button><!--boton me lleva a pantalla de inicio-->
+  <br>
       </main>
       <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados.</footer><!--se repite mismo footer en todas las paginas-->
       </div>
@@ -91,11 +91,19 @@
     <header><div id="banner">
         <img src="banner.png" id="imgTelos" alt="banner_image">
       </div></header>
-    <main>
+    <main class= "slideFour">
+      <br>
+      <br>
       <p id="prohibido">NO PUEDES ACCEDER A ESTE CONTENIDO</p>
   
         <button id="boton7" class="botones">Aceptar</button><!--este boton me lleva al inicio-->
+
+        <br>
+        <br>
     </main>
+    <br>
+    <hr>
+    <br>
      <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados. </footer><!--se repite mismo footer en todas las paginas-->
     </div>
   
@@ -103,27 +111,39 @@
   <header><div id="banner">
         <img src="banner.png" id="imgTelos" alt="banner_image">
       </div></header>
-  <main>
+  <main class= "slideFive">
     <h2 id="validado">Tu tarjeta es válida <!--aqui tenemos que linkear el resultado de la validación cuando sea correcta, ver para cambiar, el texto, si lo hacemos con un inf, para que arroje si es valida o invalida. --></h2>
   <h4>Por favor completa el siguiente formulario, para terminar la confirmación de tu reserva</h4>
   <br>
   
-  <form><!--formulario para registrar los datos-->
+  <form class= "formDatos"><!--formulario para registrar los datos-->
+    <div id= "formLabel">
   <label for = "name">Nombre:</label>
+  <br>
+
   <input id= "name" type="text" placeholder="Ej. Juan Perez" required>
+
   <br>
-  <br>
+
   <label for = "rut">Rut (Sin puntos ni guion):</label>
+  <br>
+
   <input id= "rut" type="text" placeholder="Ej. 111111111" required>
   <br>
-  <br>
+ 
   <label for = "reserva">NºReserva:</label>
+  <br>
   <input id= "reserva" type="text" placeholder="Ej.123456" required>
   </form>
   <br>
+  <br>
   <button id="boton8" class="botones">Aceptar</button><!--este boton continua con el flujo de la aplicacion, me lleva a id reservationOK-->
   <button id="boton9" class="botones">Cancelar</button><!--este boton me lleva a menu inicio-->
-  </main>
+  <br>
+</div>  
+</main>
+<hr>
+  <br>
    <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados. </footer><!--se repite mismo footer en todas las paginas-->
     </div>
   
@@ -131,16 +151,25 @@
     <header><div id="banner">
         <img src="banner.png" id="imgTelos" alt="banner_image">
       </div></header>
-      <main>
+      <main class="slideSix">
+        <br>
   <p>Tu reserva ha sido confirmada correctamente</p>
-  
-  <h5>*Para cancelaciones, contáctate directamente con el establecimiento</h5>
-  <h5>*Al momento del ingreso al recinto se solicitará el C.I ingresado en el formulario</h5>
-  
+  <br>
+  <br>
+  <p6>*Para cancelaciones, contáctate directamente con el establecimiento</p6>
+  <br>
+  <p7>*Al momento del ingreso al recinto se solicitará el C.I ingresado en el formulario</p7>
+  <br>
+
   <button id="boton10" class="botones">Aceptar</button>
+  <br>
+  <br>
   </main>
   <footer>Copyright by Carla Díaz & Paula Trujillo. 2020. Todos los derechos reservados. </footer><!--se repite mismo footer en todas las paginas-->
-    </div>
+  <br>
+  <br>
+  <hr>    
+</div>
   
     <script src="index.js" type="module"> </script> 
   </body>
